1 step fix index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <title>Hexlet Frontend Project</title>
     <!-- <script defer="defer" src="main.js"></script> -->
-    <!-- <link href="main.css" rel="stylesheet" /> -->   отключил на основе обсуждений чата...
+    <!-- <link href="main.css" rel="stylesheet" />   отключил на основе обсуждений чата... -->
   </head>
   <body class="d-flex flex-column min-vh-100">
     <div
