--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- <link href="main.css" rel="stylesheet" />   отключил на основе обсуждений чата... -->
   </head>
   <body class="d-flex flex-column min-vh-100">
+
+     <!-- Modal -->
+
     <div
       class="modal fade"
       id="modal"
@@ -33,7 +36,7 @@
           <div class="modal-body text-break"></div>
           <div class="modal-footer">
             <a
-              class="btn btn-primary full-article"
+              class="btn btn-primary modal-link full-article"
               href="#"
               role="button"
               target="_blank"
